# groonga-tokenizer-yamecab

./: Makefile.am  README.md  clean.sh  configure.ac  groonga-tokenizer-yamecab.pc.in
test/suite/default/: default.expected  default.test  delete.expected  delete.test  register.expected  register.test  rfind_digit.expected  rfind_digit.test  rfind_lastbyte.expected  rfind_lastbyte.test  rfind_punct.expected  rfind_punct.test  simple.expected  simple.test
test/suite/too_long/: too_long_digit.ddl  too_long_digit_border.ddl
tokenizers/: Makefile.am  yamecab.c
